fix: fixing swagger requestBody
